load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "users_handler.go",
    ],
    importpath = "github.com/johnbellone/user-service/src",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_micro_go_micro_v2//:go_default_library",
        "@com_github_micro_go_micro_v2//logger:go_default_library",
    ],
)

go_binary(
    name = "src",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
